--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ python: "3.6"
 
 install:
 - pip install pytest-cov
+- pip install requests
 
 script:
 - python3 -m pytest --cov-report term-missing --cov=changelog_generator
