Updated .travis.yml to include pyre type checking

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ install:
 
 script:
 - python3 -m pytest --cov-report term-missing --cov=changelog_generator
-- pyre init .
+- pyre init --source-directory .
 - pyre --source-directory . check
