--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Application specific
+CHANGELOG_generated.md
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -24,6 +27,8 @@ wheels/
 .installed.cfg
 *.egg
 MANIFEST
+bin/
+include/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
