--- a/actions/test/Dockerfile
+++ b/actions/test/Dockerfile
@@ -9,8 +9,7 @@ LABEL "repository"="https://github.com/stuartmccoll/gitlab-changelog-generator"
 LABEL "maintainer"="Stuart McColl <it@stuartmccoll.co.uk>"
 
 RUN pip install --upgrade pip
-RUN pip install pytest
-RUN pip install requirements.txt
+RUN pip install pytest unittest mock requests
 RUN python --version ; pip --version ; pytest --version
 
 COPY entrypoint.sh /
