testing dockerfile changes

--- a/actions/test/Dockerfile
+++ b/actions/test/Dockerfile
@@ -8,8 +8,10 @@ LABEL "com.github.actions.color"="black"
 LABEL "repository"="https://github.com/stuartmccoll/gitlab-changelog-generator"
 LABEL "maintainer"="Stuart McColl <it@stuartmccoll.co.uk>"
 
+RUN apk add --no-cache bash build-base gcc
 RUN pip install --upgrade pip
 RUN pip install pytest mock requests
+RUN pip install -e .
 RUN python --version ; pip --version ; pytest --version
 
 COPY entrypoint.sh /
